Fix gap in form-wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ ul {
   .form-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
     margin-bottom: 0px;
   }
 
